--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-    body {
-        @apply relative z-1 bg-gray-2   text-base font-normal text-dark-5 dark:bg-[#020D1A] dark:text-dark-6;
+body {
+        @apply relative z-1 bg-gray-2 text-base font-normal text-dark-5 dark:bg-[#020D1A] dark:text-dark-6;
+        font-family: 'Tajawal', sans-serif;
+    }
+    *{
+        font-family: 'Tajawal', sans-serif !important;
+
     }
 }
 
